frame/support/test/tests/pallet_ui/event_001.stderr
error: Invalid pallet::event, expect item enum
  --> $DIR/event_001.rs:19:2
   |
19 |     pub struct Foo;
   |     ^^^
